--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cookieparser": "^0.1.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2"
   }
 }
