--- a/MVC/package.json
+++ b/MVC/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2"
   }
 }
