--- a/Matrix_admin-panel/package.json
+++ b/Matrix_admin-panel/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "cookieparser": "^0.1.0",
     "ejs": "^3.1.10",
@@ -7,6 +8,7 @@
     "express-session": "^1.18.1",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
